[gd_scene load_steps=10 format=2]

[ext_resource path="res://scene/StartMenu/start_menu.gd" type="Script" id=1]
[ext_resource path="res://assets/mainmenu/MainMenu.jpg" type="Texture" id=2]
[ext_resource path="res://assets/music/MenuTheme.wav" type="AudioStream" id=3]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="Theme" id=6]
Button/colors/font_color = Color( 1, 1, 1, 1 )
Button/colors/font_color_hover = Color( 1, 0, 0, 1 )
Button/fonts/font = null
Button/styles/disabled = SubResource( 7 )
Button/styles/focus = SubResource( 8 )
Button/styles/hover = SubResource( 9 )
Button/styles/normal = SubResource( 10 )
Button/styles/pressed = SubResource( 11 )

[node name="MenuUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MainMenu" type="Sprite" parent="."]
position = Vector2( 514.222, 299.25 )
scale = Vector2( 0.801215, 0.832639 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_bottom = 1.0
margin_left = 49.0
margin_top = 240.0
margin_right = 255.0
margin_bottom = -328.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 6 )

[node name="Startbutton" type="Button" parent="VBoxContainer"]
margin_right = 206.0
margin_bottom = 14.0
focus_neighbour_left = NodePath("../Quitbutton")
focus_neighbour_top = NodePath("../Quitbutton")
focus_neighbour_right = NodePath("../CreditButton")
focus_neighbour_bottom = NodePath("../CreditButton")
focus_next = NodePath("../CreditButton")
focus_previous = NodePath("../Quitbutton")
size_flags_stretch_ratio = 0.0
text = "START"

[node name="CreditButton" type="Button" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 206.0
margin_bottom = 32.0
focus_neighbour_left = NodePath("../Startbutton")
focus_neighbour_top = NodePath("../Startbutton")
focus_neighbour_right = NodePath("../Quitbutton")
focus_neighbour_bottom = NodePath("../Quitbutton")
focus_next = NodePath("../Quitbutton")
focus_previous = NodePath("../Startbutton")
text = "CREDITS"

[node name="Quitbutton" type="Button" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 206.0
margin_bottom = 50.0
focus_neighbour_left = NodePath("../CreditButton")
focus_neighbour_top = NodePath("../CreditButton")
focus_neighbour_right = NodePath("../Startbutton")
focus_neighbour_bottom = NodePath("../Startbutton")
focus_next = NodePath("../Startbutton")
focus_previous = NodePath("../CreditButton")
text = "QUIT"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -13.619
autoplay = true

[connection signal="pressed" from="VBoxContainer/Startbutton" to="." method="_on_Startbutton_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditButton" to="." method="_on_CreditButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Quitbutton" to="." method="_on_Quitbutton_pressed"]
